--- a/websiteStyle.css
+++ b/websiteStyle.css
@@ -56,68 +56,6 @@ li a:hover {
 }
 
 
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: "Times New Roman", Times, serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 80px;
-  text-decoration: none;
-}
-
-
-.subnav {
-  float: left;
-  overflow: hidden;
-}
-
-.subnav .subnavbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 80px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .subnav:hover .subnavbtn {
-  background-color: black;
-}
-
-.subnav-content {
-  display: none;
-  position: absolute;
-  left: 0;
-  background-color: black;
-  width: 100%;
-  z-index: 1;
-}
-
-.subnav-content a {
-  float: left;
-  color: white;
-  text-decoration: none;
-}
-
-.subnav-content a:hover {
-  background-color: #333;
-  color: white;
-}
-
-.subnav:hover .subnav-content {
-  display: block;
-}
-
-
-
 .dropdown {
   float: left;
   overflow: hidden;
@@ -202,9 +140,9 @@ li a:hover {
   height: 60%;
 }
 
-.responsiveVideo {
-  width: auto;
-  height: 50%;
-}
 
+video {
+  max-width: 45%;
+  height: auto;
+}
 
